2005-11-19 09:57 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 1.0.1
	
2005-11-14 09:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormTabViewEditor.m: Correction to tabView:
	shouldSelectTabViewItem: for gcc < 3.x compatibility.

2005-11-13 23:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomClassInspector.m: Correctly handle image/text
	cell in replaceWithCellClassForClassName:.

2005-11-13  Richard Frith-Macdonald <rfm@gnu.org>

	* GormCore/GormFunctions.m: Use NSSearchPathForDirectoriesInDomains()
	to locate resources rather than broken use of NSOpenStepRootDirectory()

2005-11-12 16:32 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.m
	* GormCore/GormGenericEditor.h
	* GormCore/GormPalettesManager.m
	* GormCore/GormPrivate.h
	* GormObjCHeaderParser/OCHeaderParser.m
	* Palettes/0Menus/GormMenuAttributesInspector.m: Corrected minor
	compilation warnings.

2005-11-12 15:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormScrollViewAttributesInspector.m: Corrected problem
	reported by Matt Rice with table column selection.

2005-11-04 00:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomClassInspector.m: Corrected problem with cell.

2005-11-02 20:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m: Updated version to 1.0.1
	* GormInfo.plist: Same
	* Palettes/2Controls/GormNSTextFieldInspector.gorm: Corrected resize
	issues.

2005-10-29 09:09 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 1.0.0
	
2005-10-29 09:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* ANNOUNCE: Updated for 1.0
	* Documentation/news.texi: Updated for 1.0
	* INSTALL: Updated for 1.0
	* NEWS: Updated for 1.0
	* README: Updated for 1.0
	* Version: Updated for 1.0
	* GormCore/GormCustomClassInspector.m: Fixed minor problem 
	updating cell.
